# CMakeTemplate

./: .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .cmakelintrc.license  .dockerignore  .editorconfig  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-and-test.yml  ci.yml
src/: .gitignore  CMakeLists.txt  builtins.h  html5.c  html5.h  main.c  mem.h  stack.h  std.h  sum.c  sum.h  types.h  utf8str32.h  version.c.in  version.h
src/python3/: lib.py
tests/: CMakeLists.txt  helloworld.c  simple.c  std.c  temp.c  test_py.py
